# egui-inspect

./: Cargo.toml  README.md
egui-inspect-derive/: Cargo.toml
egui-inspect-derive/src/: lib.rs
src/: inspect.rs  lib.rs  ui_ext.rs
testbed/: Cargo.toml
testbed/src/: main.rs
