[package]
name = "egui-inspect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["egui-inspect-derive"]
default = ["derive"]

[dependencies]
egui = "0.21.0"
egui-inspect-derive = { path = "egui-inspect-derive", optional = true}

[workspace]
members = ["egui-inspect-derive", "testbed"]
